# fthpp

./: LICENSE  README.md  environment.yml  setup.cfg
src/fthpp/: core.py  helpers.py
src/fthpp/cci/: CCI_core.py  ccicore.py
src/fthpp/gui/: jupyter.py
src/legacy/: CCI_core.py  interactive.py
