[metadata]
name = fthpp
version = 0.1
license = MIT
description = A collection of tools to reconstruct Fourier transform holography data from soft x-ray experiments
long_description = file: README.md
author = fthpp authors
classifiers=
   Development Status :: 2 - Pre-Alpha
   Environment :: GPU :: NVIDIA CUDA
   Framework :: Jupyter :: JupyterLab
   Intended Audience :: Science/Research
   Topic :: Scientific/Engineering :: Image Processing
   Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src